Start Stop knap!

--- a/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.css
+++ b/angular-app/src/app/project-view/query-view/query-visual-view/query-visual-view.component.css
@@ -3,7 +3,9 @@
     font-weight: bold;
     font-size: 21px;
     text-decoration: underline;
+    margin-bottom: 0;
 }
+
 .visBod{
-    margin-top: 25px;
+
 }
