--- a/angular-app/src/app/project-view/query-view/query-visual-view/query-visual/query-visual.component.html
+++ b/angular-app/src/app/project-view/query-view/query-visual-view/query-visual/query-visual.component.html
@@ -1,2 +1,6 @@
+<button mat-raised-button class="button" (click)="stopOrdKnap()">
+    <p *ngIf='this.queryservice.stopWordsActive === true'>Tilføj stopord</p>
+    <p *ngIf='this.queryservice.stopWordsActive !== true'>Fjern stopord</p>
+</button>
 <svg></svg>
 
