--- a/angular-app/src/app/project-view/query-view/query-visual-view/query-visual/query-visual.component.css
+++ b/angular-app/src/app/project-view/query-view/query-visual-view/query-visual/query-visual.component.css
@@ -7,10 +7,17 @@
     overflow: hidden;
     margin-top: 35px;
 }
+.button{
+    position: absolute;
+    z-index: 5000;
+}
+.button p {
+    margin-bottom: 0;
+}
 .svg-content-responsive {
     display: inline-block;
     position: absolute;
-    top: 10px;
+    top: 50px;
     left: 0;
 
 }
