--- a/angular-app/src/app/home-view/project-list/project-list.component.html
+++ b/angular-app/src/app/home-view/project-list/project-list.component.html
@@ -1,9 +1,9 @@
-<mat-list *ngIf='noProjects;'>
+
   <!--<mat-list-item>Ingen projekter at vise!</mat-list-item>-->
-</mat-list>
 
+  <mat-list *ngIf='!noProjects;'>
 <p class="projekterHeader">Projekter</p>
-
+  </mat-list>
 <mat-nav-list *ngIf='!noProjects'>
   <div class="cardContainer" *ngFor="let project of projects">
 
