--- a/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
+++ b/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
@@ -65,11 +65,11 @@
                 <div class="halfWidth">
 
                     <mat-form-field style="width: 100%">
-                        <input matInput type="number"[formControl]="maxInput" (keypress)="numberOnly($event)" placeholder="Maks"
-                            id="myNumber" />
+                        <input matInput type="number" [formControl]="maxInput" (keypress)="numberOnly($event)"
+                            placeholder="Maks" id="myNumber" />
                         <mat-hint>Antallet af opslag din søgning maks kan hente</mat-hint>
                         <!--<mat-error *ngIf="max.invalid || max.touched">-->
-                          <!--Du må kun bruge tal!-->
+                        <!--Du må kun bruge tal!-->
                         <!--</mat-error>-->
                         <!-- <input matInput placeholder="Max" value=" "> -->
                     </mat-form-field>
@@ -107,7 +107,7 @@
                             <div style="">
                                 <div style="display: block">
                                     {{group.name}}
-                                    <div style="color:blue">
+                                    <div style="color:rgb(67, 67, 77)">
                                         {{group.desc}}
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                             <div style="">
                                 <div style="display: block">
                                     {{group.name}}
-                                    <div style="color:blue">
+                                    <div style="color:rgb(67, 67, 77)">
                                         {{group.desc}}
                                     </div>
                                 </div>
@@ -133,10 +133,10 @@
                 </div>
             </div>
 
-
-            <button mat-raised-button color="primary" [disabled]="myForm.invalid || !isValid"
-                (click)="StartQuery()">SØG!</button>
-
+            <div id="bttnContainer">
+                <button mat-raised-button color="primary" [disabled]="myForm.invalid || !isValid"
+                    (click)="StartQuery()">SØG!</button>
+            </div>
         </form>
     </div>
 
