--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,6 +1,6 @@
 <app-project-navigation></app-project-navigation>
 <app-query-view></app-query-view>
-<app-new-query-view></app-new-query-view>
+<!--<app-new-query-view></app-new-query-view>-->
 
 
 <!-- <app-query-visual-view></app-query-visual-view> -->
