--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -21,7 +21,7 @@
                     <mat-card *ngFor="let group of groupsShown; let i = index" (click)="addToSelected(i)">
                         <div class="card">
             <span class="content">
-              <div style="display: block" style="color:aliceblue" class="gTitle">
+              <div style="display: block; color:aliceblue" class="gTitle">
                 {{ group.name }}
                   <div style="color:black" class="gDesc">
                   {{ group.desc }}
