--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.css
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.css
@@ -1,11 +1,10 @@
 
 .center {
-    margin: auto;
     width: 100%;
     height: 80%;
     text-align: center;
     align-content: center;
-    margin-top: 2%;
+    margin: 2% auto auto;
 }
 .headerText{
     margin-top: 25px;
